# LiteETL

./: .gitignore  .gitmodules  LiteETL.7z  README.md  data.db  dockerfile  main.py  pack.ps1  pyproject.toml  requirements.txt  scheduler.py  server.py  start.bat  start.ps1  temp.py
source/: data.db
source/select/ameliorate/increase/: ameliorate_source.sql  (+1 more)
source/select/attendance/: kq_time.sql
source/select/business_connection/: business_connection_copy_delivery_unit.sql  design_change_execution_copy_delivery_unit.sql  design_change_execution_document_change_unit.sql  design_change_execution_main_delivery_unit.sql  design_change_execution_material_preparation_technology_unit.sql  design_change_execution_reworked_material_unit.sql
source/select/interested_party/: sync_interested_party.sql  sync_interested_party_entry.sql
source/table/: 城轨事业部改善指标.csv
tasks/: base.py  executer.py  init.py  scheduler.py  task.py
tasks/process/: __init__.py  address_directory.py  ameliorate.py  approval_flow.py  attendance.py  error.py  interested_party.py  person.py  personnel_effectiveness.py  wire_number.py
tasks/process/error/: __init__.py  api_data_generation.py  detailed_calculations.py  display_data_generation.py  time_process.py
tasks/process/interested_party/: __init__.py  api_data_generation.py  links_calculations.py
tasks/sync/: __init__.py  ameliorate.py  approval_flow.py  attendance.py  business_connection.py  error.py  interested_party.py  person.py  personnel_requirements.py  wire_number.py  work_time.py
utils/: __init__.py  config.py  connect.py  logger.py
(+142 files in other folders)
