[project]
name = "liteetl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.9.0",
    "cx-oracle>=8.3.0",
    "duckdb>=1.2.1",
    "fastapi>=0.115.12",
    "mysqlclient>=2.2.7",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "psycopg2>=2.9.10",
    "pymongo>=4.11.3",
    "pyodbc>=5.2.0",
    "sqlalchemy>=2.0.39",
    "uvicorn[standard]>=0.34.0",
]
