[project]
name = "liteetl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.9.0",
    "cx-oracle>=8.3.0",
    "duckdb>=1.2.2",
    "fastapi>=0.115.12",
    "mysqlclient>=2.2.7",
    "numpy>=2.2.4",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "psycopg2>=2.9.10",
    "pyarrow>=20.0.0",
    "pymongo>=4.12.0",
    "pyodbc>=5.2.0",
    "sqlalchemy>=2.0.40",
    "uvicorn[standard]>=0.34.2",
]
